--- a/app/views/exercises/questions/_index.html.erb
+++ b/app/views/exercises/questions/_index.html.erb
@@ -1,8 +1,8 @@
 <% # Clients of this partial must supply the following variable:
-   # questions %>
+   # exercise %>
 
-<% questions.each do |question| %>
-  <%= render :partial => 'exercises/questions/show', :locals => {:question => question} %>
-<% end %>
-
-
+<div class="questions">
+  <% exercise.questions.each do |question| %>
+    <%= render :partial => 'exercises/questions/show', :locals => {:question => question} %>
+  <% end %>
+</div>
