--- a/app/views/exercises/questions/free_response_answers/_index.html.erb
+++ b/app/views/exercises/questions/free_response_answers/_index.html.erb
@@ -1,35 +1,14 @@
-<h1>Listing free_response_answers</h1>
+<% # Clients of this partial must supply the following variable:
+   # question %>
 
-<table>
-  <tr>
-    <th>Question</th>
-    <th>Content</th>
-    <th>Content html</th>
-    <th>Free response</th>
-    <th>Can be sketched</th>
-    <th>Order</th>
-    <th>Credit</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<div class="answers">
+  <% unless question.free_response_answers.empty? %>
+    <p>
+      <b>Free response answers</b>
+    </p>
+  <% end %>
 
-<% @free_response_answers.each do |free_response_answer| %>
-  <tr>
-    <td><%= free_response_answer.question_id %></td>
-    <td><%= free_response_answer.content %></td>
-    <td><%= free_response_answer.content_html %></td>
-    <td><%= free_response_answer.free_response %></td>
-    <td><%= free_response_answer.can_be_sketched %></td>
-    <td><%= free_response_answer.order %></td>
-    <td><%= free_response_answer.credit %></td>
-    <td><%= link_to 'Show', free_response_answer %></td>
-    <td><%= link_to 'Edit', edit_free_response_answer_path(free_response_answer) %></td>
-    <td><%= link_to 'Destroy', free_response_answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Free response answer', new_free_response_answer_path %>
+  <% question.free_response_answers.each do |answer| %>
+    <%= render :partial => 'exercises/questions/free_response_answers/show', :locals => {:answer => answer} %>
+  <% end %>
+</div>
