--- a/app/views/exercises/questions/free_response_answers/_show.html.erb
+++ b/app/views/exercises/questions/free_response_answers/_show.html.erb
@@ -1,40 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% # Clients of this partial must supply the following variable:
+   # answer %>
 
-<p>
-  <b>Question:</b>
-  <%= @free_response_answer.question_id %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @free_response_answer.content %>
-</p>
-
-<p>
-  <b>Content html:</b>
-  <%= @free_response_answer.content_html %>
-</p>
-
-<p>
-  <b>Free response:</b>
-  <%= @free_response_answer.free_response %>
-</p>
-
-<p>
-  <b>Can be sketched:</b>
-  <%= @free_response_answer.can_be_sketched %>
-</p>
-
-<p>
-  <b>Order:</b>
-  <%= @free_response_answer.order %>
-</p>
-
-<p>
-  <b>Credit:</b>
-  <%= @free_response_answer.credit %>
-</p>
-
-
-<%= link_to 'Edit', edit_free_response_answer_path(@free_response_answer) %> |
-<%= link_to 'Back', free_response_answers_path %>
+<div class="answer">
+  <% if !answer.credit.nil? && answer.credit > 0 %>(<%= answer.credit %> pt): <% end %>
+  <%= answer.content_html.html_safe %>
+  <%= answer.free_response %>
+</div>
