--- a/app/views/exercises/questions/matching_answers/_show.html.erb
+++ b/app/views/exercises/questions/matching_answers/_show.html.erb
@@ -1,40 +1,13 @@
-<p id="notice"><%= notice %></p>
+<% # Clients of this partial must supply the following variable:
+   # answer %>
 
-<p>
-  <b>Question:</b>
-  <%= @matching_answer.question_id %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @matching_answer.content %>
-</p>
-
-<p>
-  <b>Content html:</b>
-  <%= @matching_answer.content_html %>
-</p>
-
-<p>
-  <b>Match number:</b>
-  <%= @matching_answer.match_number %>
-</p>
-
-<p>
-  <b>Right column:</b>
-  <%= @matching_answer.right_column %>
-</p>
-
-<p>
-  <b>Order:</b>
-  <%= @matching_answer.order %>
-</p>
-
-<p>
-  <b>Credit:</b>
-  <%= @matching_answer.credit %>
-</p>
-
-
-<%= link_to 'Edit', edit_matching_answer_path(@matching_answer) %> |
-<%= link_to 'Back', matching_answers_path %>
+<div class="answer">
+  <table>
+    <tr>
+      <td><%= answer.left_content_html.html_safe %></td>
+      <td><p>-</p></td>
+      <td><%= answer.right_content_html.html_safe %></td>
+      <td><p>(<%= answer.is_true %><% if !answer.credit.nil? && answer.credit > 0 %> - <%= answer.credit %> pt<% end %>)</p></td>
+    </tr>
+  </table>
+</div>
