--- a/app/views/exercises/questions/short_answers/_form.html.erb
+++ b/app/views/exercises/questions/short_answers/_form.html.erb
@@ -1,12 +1,12 @@
 <% # Clients of this partial must supply the following variable:
    # q %>
 
-<div class="answer_format">
+<div class="answers_form">
   <p>
     <b>Short answers</b>
   </p>
   <%= q.fields_for :short_answers do |a| %>
-    <div class="answer">
+    <div class="answer_form">
       <div class="field">
         <%= a.label :content %><br />
         <%= a.text_area :content %>
