--- a/app/views/exercises/questions/true_or_false_answers/_show.html.erb
+++ b/app/views/exercises/questions/true_or_false_answers/_show.html.erb
@@ -1,35 +1,11 @@
-<p id="notice"><%= notice %></p>
+<% # Clients of this partial must supply the following variable:
+   # answer %>
 
-<p>
-  <b>Question:</b>
-  <%= @true_or_false_answer.question_id %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @true_or_false_answer.content %>
-</p>
-
-<p>
-  <b>Content html:</b>
-  <%= @true_or_false_answer.content_html %>
-</p>
-
-<p>
-  <b>Is true:</b>
-  <%= @true_or_false_answer.is_true %>
-</p>
-
-<p>
-  <b>Order:</b>
-  <%= @true_or_false_answer.order %>
-</p>
-
-<p>
-  <b>Credit:</b>
-  <%= @true_or_false_answer.credit %>
-</p>
-
-
-<%= link_to 'Edit', edit_true_or_false_answer_path(@true_or_false_answer) %> |
-<%= link_to 'Back', true_or_false_answers_path %>
+<div class="answer">
+  <table>
+    <tr>
+      <td><%= answer.content_html.html_safe %></td>
+      <td><p>(<%= answer.is_true.to_s.capitalize %><% if !answer.credit.nil? && answer.credit > 0 %> - <%= answer.credit %> pt<% end %>)</p></td>
+    </tr>
+  </table>
+</div>
