--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -1,12 +1,13 @@
 <p>
-  <b>Exercise</b>
-  e<%= @exercise.number %>v<%= @exercise.version %>
+  <b>Exercise e<%= @exercise.number %>v<%= @exercise.version %></b>
+  <% if !@exercise.credit.nil? && @exercise.credit > 0 %>(<%= @exercise.credit %> pt):<% end %>
 </p>
 
-<% if !@exercise.credit.nil? && @exercise.credit > 0 %>(<%= @exercise.credit %> pt): <% end %>
 <%= @exercise.content_html.html_safe %>
 
-<%= render :partial => 'exercises/questions/index', :locals => {:questions => @exercise.questions} %>
+<%= render :partial => 'exercises/questions/index', :locals => {:exercise => @exercise} %>
+
+<br/>
 
 <p>
   <b>License:</b>
