--- a/app/views/user_groups/index.html.erb
+++ b/app/views/user_groups/index.html.erb
@@ -7,7 +7,7 @@
     <th></th>
   </tr>
 
-<% current_user.user_group_users.each do |user_group_user| %>
+<% @user_group_users.each do |user_group_user| %>
   <tr>
     <td><%= link_to user_group_user.user_group.full_name, user_group_user.user_group %></td>
     <td><%= user_group_user.is_manager ? 'Manager' : 'Member' %></td>
