--- a/app/views/exercises/_index.html.erb
+++ b/app/views/exercises/_index.html.erb
@@ -8,12 +8,14 @@
   <tr>
     <th>Exercise</th>
     <th>Quick View</th>
+    <th>Status</th>
     <th>Has solutions?</th>
   </tr>
 <% exercises.each do |exercise| %>
   <tr>
     <td><%= link_to "e#{exercise.number}v#{exercise.version}", exercise %></td>
     <td><%= quickview_link(exercise) %></td>
+    <td><%= exercise.is_published? ? 'Published' : 'Draft' %></td>
     <td><%= tf_to_yn(!exercise.solutions.empty?) %></td>
   </tr>
 <% end %>
