--- a/app/views/exercises/_search.html.erb
+++ b/app/views/exercises/_search.html.erb
@@ -4,11 +4,11 @@
 <% @per_page ||= 20
 
    @query ||= ''
-   @part ||= 'content'
+   @part ||= 'content/answers'
    @exercise_type ||= 'all exercises'
    @answer_type ||= 'any answer types'
 
-   parts = ['content', 'tags', 'author/copyright holder', 'ID/number']
+   parts = ['content/answers', 'tags', 'author/copyright holder', 'ID/number']
    exercise_types = ['all exercises', 'published exercises']
    exercise_types.push('draft exercises', 'exercises in my lists') if user_signed_in?
    answer_types = ['any answer types', 
@@ -30,7 +30,7 @@
       <td>&nbsp;<%= label_tag 'in' %>&nbsp;</td>
       <td><%= select_tag 'part', options_for_select(parts, @part), :style => "width: 90%;" %></td>
 
-      <td rowspan="3" style="vertical-align:middle;"><%= submit_tag 'Search', :class => "#{submit_classes}" %></td>
+      <td rowspan="3" style="vertical-align:middle;"><%= submit_tag 'Search' %></td>
 
     </tr>
     <tr>
@@ -42,7 +42,7 @@
       <td><%= select_tag 'exercise_type', options_for_select(exercise_types, @exercise_type), :style => "width: 90%;" %></td>
 
       <td>&nbsp;<%= label_tag 'with' %>&nbsp;</td>
-      <td><%= select_tag 'answer_type', options_for_select(answer_type_options, @answer_type), :style => "width: 90%;" %></td>
+      <td><%= select_tag 'answer_type', options_for_select(answer_types, @answer_type), :style => "width: 90%;" %></td>
     </tr>
   </table>
 <% end %>
