--- a/app/views/list_exercises/_exercises_list.html.erb
+++ b/app/views/list_exercises/_exercises_list.html.erb
@@ -1,24 +1,35 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
-    License version 3 or later.  See the COPYRIGHT file for details. %>
-
-<% # Clients of this partial must supply the following variable:
-   # exercises %>
+<%# Clients of this partial must supply the following variables:
+    exercises
+    list %>
 
 <table>
   <tr>
+    <th></th>
     <th>Exercise</th>
     <th>Quick View</th>
     <th>Status</th>
     <th>Has solutions?</th>
+    <th></th>
   </tr>
 <% exercises.each do |exercise| %>
   <tr>
+    <td></td>
     <td><%= link_to exercise.name, exercise %></td>
     <td><%= quickview_link(exercise) %></td>
     <td><%= exercise.is_published? ? 'Published' : 'Draft' %></td>
     <td><%= tf_to_yn(!exercise.solutions.empty?) %></td>
+    <td><% if list.has_exercise?(exercise) %>
+          <%= 'Already in list' %>
+        <% else %>
+          <%= form_tag(list_list_exercises_path(list)) do |f| %>
+            <%= hidden_field_tag 'exercise_id', exercise.id %>
+            <%= submit_tag 'Add exercise' %>
+          <% end %>
+        <% end %></td>
   </tr>
 <% end %>
 </table>
 
 <%= render :partial => 'exercises/quickview_dialog' %>
+
+
