--- a/app/views/list_exercises/_index.html.erb
+++ b/app/views/list_exercises/_index.html.erb
@@ -1,24 +1,34 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
-    License version 3 or later.  See the COPYRIGHT file for details. %>
-
 <% # Clients of this partial must supply the following variable:
-   # exercises %>
+   # list_exercises %>
+
+<%# TODO: Sort %>
 
 <table>
   <tr>
+    <th></th>
     <th>Exercise</th>
     <th>Quick View</th>
     <th>Status</th>
     <th>Has solutions?</th>
+    <th></th>
   </tr>
-<% exercises.each do |exercise| %>
+<% list_exercises.each do |list_exercise| %>
+  <% exercise = list_exercise.exercise %>
   <tr>
+    <td></td>
     <td><%= link_to exercise.name, exercise %></td>
     <td><%= quickview_link(exercise) %></td>
     <td><%= exercise.is_published? ? 'Published' : 'Draft' %></td>
     <td><%= tf_to_yn(!exercise.solutions.empty?) %></td>
+    <td><% if list_exercise.can_be_destroyed_by?(current_user) || user_is_admin? %>
+          <%= link_to 'Remove', list_exercise, method: :delete, data: {
+                confirm: "Are you sure you want to remove #{exercise.name} from the list?"
+              } %>
+        <% end %></td>
   </tr>
 <% end %>
 </table>
 
 <%= render :partial => 'exercises/quickview_dialog' %>
+
+
