--- a/app/views/user_group_users/_index.html.erb
+++ b/app/views/user_group_users/_index.html.erb
@@ -1,4 +1,6 @@
-<% # Clients of this partial can override the following variable:
+<% # Clients of this partial must supply the following variable:
+   # user_group_users
+   # Additionally, they can override the following variable:
    hide_status ||= false
 %>
 
@@ -12,7 +14,17 @@
   </tr>
 
 <% user_group_users.each do |user_group_user| %>
-  <%= render :partial => 'user_group_users/show', :locals => {:user_group_user => user_group_user,
-                                                              :hide_status => hide_status} %>
+  <tr>
+    <td><%= user_group_user.user.name %></td>
+  <% unless hide_status %>
+    <td><%= user_group_user.is_manager ? 'Manager' : 'Member' %> (<%= link_to 'Toggle', toggle_user_group_user_path(user_group_user), method: :put, data: {
+      confirm: "Are you sure you want to #{user_group_user.is_manager ? 'demote' : 'promote'} #{user_group_user.user.name} to group #{user_group_user.is_manager ? 'member' : 'manager'}?"
+    } %>)</td>
+  <% end %>
+    <td><% if user_group_user.can_be_destroyed_by?(current_user) || user_is_admin? %>
+          <%= link_to (user_group_user.user == current_user ? 'Leave Group' : 'Remove'), user_group_user, method: :delete,
+                data: { confirm: "Are you sure you want to remove #{user_group_user.user.name} from the group?" } %>
+        <% end %></td>
+  </tr>
 <% end %>
 </table>
