--- a/app/views/user_group_users/new.html.erb
+++ b/app/views/user_group_users/new.html.erb
@@ -1,13 +1,13 @@
 <h1>Add user</h1>
 
-<%= form_tag(new_user_group_user_group_user_path(@user_group)) do %>
+<%= form_tag(new_user_group_user_group_user_path(@user_group), :method => :get) do %>
   <table width="550px" align="center">
     <tr>
       <td><%= label_tag 'Search For:' %>&nbsp;</td>
-      <td><%= text_field_tag 'text_query', @text_query %>&nbsp;</td>
+      <td><%= text_field_tag 'query', @query %>&nbsp;</td>
       <td><%= label_tag 'in:' %>&nbsp;</td>
-      <td><%= select_tag 'selected_type', 
-              options_for_select(['Name', 'Username', 'Email'], @selected_type) %>
+      <td><%= select_tag 'type', 
+              options_for_select(['Name', 'Username', 'Email'], @type) %>
         &nbsp;
       </td>
       <td>
@@ -18,10 +18,9 @@
 <% end %>
 
 <div id="users_list">
-  <%= render :partial => 'user_search',
-             :locals => {:user_group_user => @user_group_user,
-                         :user_group => @user_group,
-                         :users => @users} %>
+  <%= render :partial => 'users_list',
+             :locals => {:users => @users,
+                         :user_group => @user_group} %>
 </div>
 
 <%= link_to 'Back', user_group_path(@user_group) %>
