--- a/app/views/list_exercises/_exercises_list.html.erb
+++ b/app/views/list_exercises/_exercises_list.html.erb
@@ -17,7 +17,7 @@
     <td><%= link_to exercise.name, exercise %></td>
     <td><%= quickview_link(exercise) %></td>
     <td><%= exercise.is_published? ? 'Published' : 'Draft' %></td>
-    <td><%= tf_to_yn(!exercise.solutions.empty?) %></td>
+    <td><%= yn(!exercise.solutions.empty?) %></td>
     <td><% if list.has_exercise?(exercise) %>
           <%= 'Already in list' %>
         <% else %>
