--- a/app/views/list_exercises/_index.html.erb
+++ b/app/views/list_exercises/_index.html.erb
@@ -19,7 +19,7 @@
     <td><%= link_to exercise.name, exercise %></td>
     <td><%= quickview_link(exercise) %></td>
     <td><%= exercise.is_published? ? 'Published' : 'Draft' %></td>
-    <td><%= tf_to_yn(!exercise.solutions.empty?) %></td>
+    <td><%= yn(!exercise.solutions.empty?) %></td>
     <td><% if list_exercise.can_be_destroyed_by?(current_user) || user_is_admin? %>
           <%= link_to 'Remove', list_exercise, method: :delete, data: {
                 confirm: "Are you sure you want to remove #{exercise.name} from the list?"
