--- a/app/views/question_dependency_pairs/_index.html.erb
+++ b/app/views/question_dependency_pairs/_index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="question_dependency_pairs">
   <% if question_dependency_pairs.empty? %>
-      This question has no dependencies
+      This question has no dependencies.
   <% end %>
 
   <ul>
