Added page heading and admin console

--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add collaborator</h1>
+<%= page_heading 'Add collaborator' %>
 
 <%= form_tag(new_polymorphic_path([@publishable, :collaborator]), :method => :get) do %>
   <table width="550px" align="center">
