--- a/app/views/doorkeeper/applications/edit.html.erb
+++ b/app/views/doorkeeper/applications/edit.html.erb
@@ -1,6 +1,4 @@
-<div class="span16">
-  <header class="page-header"><h2>Edit application</h2></header>
-</div>
+<%= page_heading 'Edit application' %>
 
 <div class="span12">
   <%= render 'form', :application => @application %>
