--- a/app/views/doorkeeper/applications/new.html.erb
+++ b/app/views/doorkeeper/applications/new.html.erb
@@ -1,9 +1,8 @@
-<%= page_heading "New OAuth Application" %>
+<%= page_heading 'New OAuth application' %>
 
 <div>
   <%= render 'form', :application => @application %>
 </div>
 
-
-  <p><%= link_to 'Back to application list', oauth_applications_path %></p>
+<p><%= link_to 'Back to application list', oauth_applications_path %></p>
 
