--- a/app/views/doorkeeper/applications/show.html.erb
+++ b/app/views/doorkeeper/applications/show.html.erb
@@ -1,4 +1,4 @@
-<%= page_heading "OAuth Application: #{@application.name}" %>
+<%= page_heading "OAuth application: #{@application.name}" %>
 
 <div class="span10">
   <h4>Callback url:</h4>
