--- a/app/views/doorkeeper/authorized_applications/index.html.erb
+++ b/app/views/doorkeeper/authorized_applications/index.html.erb
@@ -1,8 +1,6 @@
-<div class="span16">
-  <header class="page-header">
-    <h2>Your authorized applications</h2>
-  </header>
+<%= page_heading "Your authorized applications" %>
 
+<div class="span16">
   <table class="zebra-striped">
     <thead>
       <tr>
