--- a/app/views/licenses/show.html.erb
+++ b/app/views/licenses/show.html.erb
@@ -1,9 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Short name:</b>
-  <%= @license.short_name %>
-</p>
+<%= page_heading @license.short_name %>
 
 <p>
   <b>Long name:</b>
