--- a/app/views/solutions/show.html.erb
+++ b/app/views/solutions/show.html.erb
@@ -1,14 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Number:</b>
-  <%= @solution.number %>
-</p>
-
-<p>
-  <b>Version:</b>
-  <%= @solution.version %>
-</p>
+<%= page_heading "Solution #{@solution.to_param}" %>
 
 <p>
   <b>Content:</b>
