--- a/app/views/static_pages/copyright.html.erb
+++ b/app/views/static_pages/copyright.html.erb
@@ -1,5 +1,4 @@
-<%= page_heading "Copyright and Licensing Details" %>
-<%#= page_heading "Write a New Question" %>
+<%= page_heading 'Copyright and licensing details' %>
 
 <%= partial_width_block do %>
 
