--- a/app/views/user_group_users/new.html.erb
+++ b/app/views/user_group_users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add user</h1>
+<%= page_heading 'Add user' %>
 
 <%= form_tag(new_user_group_user_group_user_path(@user_group), :method => :get) do %>
   <table width="550px" align="center">
