--- a/app/views/user_profiles/edit.html.erb
+++ b/app/views/user_profiles/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing user_profile</h1>
+<%= page_heading 'Editing your profile' %>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user_profile %> |
-<%= link_to 'Back', user_profiles_path %>
+<%= link_to 'Back', @user_profile %>
