--- a/app/views/admin/user_groups/show.html.erb
+++ b/app/views/admin/user_groups/show.html.erb
@@ -1,10 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @user_group.name %>
-</p>
-
+<%= page_heading @user_group.name %>
 
 <%= link_to 'Edit', edit_user_group_path(@user_group) %> |
 <%= link_to 'Back', user_groups_path %>
