--- a/app/views/user_groups/show.html.erb
+++ b/app/views/user_groups/show.html.erb
@@ -1,6 +1,4 @@
-<h3>
-  <%= @user_group.full_name %>
-</h3>
+<%= page_heading @user_group.full_name %>
 
 <%= render :partial => 'user_group_users/index', :locals => {:user_group_users => @user_group.user_group_users,
                                                              :hide_status => !@user_group.container.nil?} %>
