--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= page_heading 'Your profile' %>
 
 <p>
   <b>User:</b>
@@ -27,4 +27,4 @@
 
 
 <%= link_to 'Edit', edit_user_profile_path(@user_profile) %> |
-<%= link_to 'Back', user_profiles_path %>
+<%= link_to 'Back', root_path %>
