--- a/app/views/admin/licenses/_form.html.erb
+++ b/app/views/admin/licenses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@license) do |f| %>
+<%= form_for([:admin, @license]) do |f| %>
   <% if @license.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@license.errors.count, "error") %> prohibited this license from being saved:</h2>
@@ -12,24 +12,20 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :short_name %><br />
-    <%= f.text_field :short_name %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :long_name %><br />
-    <%= f.text_field :long_name %>
+    <%= f.label :short_name %><br />
+    <%= f.text_field :short_name %>
   </div>
   <div class="field">
     <%= f.label :url %><br />
     <%= f.text_field :url %>
   </div>
   <div class="field">
-    <%= f.label :partial_name %><br />
-    <%= f.text_field :partial_name %>
-  </div>
-  <div class="field">
-    <%= f.label :is_default %><br />
-    <%= f.check_box :is_default %>
+    <%= f.label :partial_filename %><br />
+    <%= f.text_field :partial_filename %>
   </div>
   <div class="actions">
     <%= f.submit %>
